--- a/pages/iscsi/iscsi.html
+++ b/pages/iscsi/iscsi.html
@@ -89,7 +89,7 @@
     <header class="bg-white/90 backdrop-blur-md sticky top-0 z-50 border-b border-slate-200">
         <div class="container mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex items-center justify-between h-16">
-                <a href="https://neurophasia.com" target="_blank" class="text-2xl font-bold text-slate-800 hover:text-blue-600 transition-colors">Neurophasia</a>
+                <a href="https://neurophasia.com" class="text-2xl font-bold text-slate-800 hover:text-blue-600 transition-colors">Neurophasia</a>
                 <nav class="hidden md:flex items-center space-x-8">
                     <a href="#overview" class="nav-link text-sm font-medium text-slate-600">Overview</a>
                     <a href="#architecture" class="nav-link text-sm font-medium text-slate-600">Architecture</a>
