--- a/pages/pi/pi.html
+++ b/pages/pi/pi.html
@@ -59,7 +59,7 @@
 
     <header class="bg-stone-50/80 backdrop-blur-md sticky top-0 z-50 shadow-sm">
         <nav class="container mx-auto px-6 py-3 flex justify-between items-center">
-            <a href="https://neurophasia.com" target="_blank" class="text-2xl font-bold font-serif text-neutral-800 hover:text-[#a16207] transition-colors">
+            <a href="https://neurophasia.com" class="text-2xl font-bold font-serif text-neutral-800 hover:text-[#a16207] transition-colors">
                 Neurophasia
             </a>
             <div class="hidden md:flex space-x-8">
