--- a/pages/hdr/hdr.html
+++ b/pages/hdr/hdr.html
@@ -101,7 +101,7 @@
     <main class="container mx-auto px-4 sm:px-6 lg:px-8 py-8">
 
         <section id="introduction" class="section-card text-center">
-            <h2 class="text-3xl font-bold text-gray-900 mb-4">The Leap from SDR to HDR</h2>
+            <h2 class="text-3xl font-bold text-gray-900 mb-4">The HDR Abstract</h2>
             <p class="max-w-3xl mx-auto text-lg text-gray-600 mb-8">This abstract takes a look into High Dynamic Range (HDR) video. We'll dissect the core concepts that enable HDR to deliver a more realistic and immersive viewing experience by expanding luminance and color far beyond the limits of Standard Dynamic Range (SDR). Use the interactive charts and comparisons below to understand the quantifiable benefits of this technology.</p>
             <div class="grid md:grid-cols-2 gap-8">
                 <div>
