fixed issue with overlapping text

--- a/pages/audiocodecs/audiocodecs.html
+++ b/pages/audiocodecs/audiocodecs.html
@@ -124,30 +124,30 @@
                 <div class="bg-white p-8 rounded-xl shadow-lg border border-stone-200 card">
                     <h3 class="text-2xl font-bold text-slate-700 mb-4">🎧 Music Streaming</h3>
                     <p class="text-slate-600 mb-4">Requires a balance of quality and bandwidth efficiency for smooth playback on various devices and networks.</p>
-                    <ul class="space-y-2">
-                        <li class="flex items-center"><span class="font-bold text-slate-600 w-16">AAC:</span><span class="text-sm text-slate-500">Standard for Apple Music, YouTube. Great quality/bitrate ratio.</span></li>
-                        <li class="flex items-center"><span class="font-bold text-slate-600 w-16">Opus:</span><span class="text-sm text-slate-500">Used by Spotify/YouTube. Highly efficient and versatile.</span></li>
-                        <li class="flex items-center"><span class="font-bold text-slate-600 w-16">FLAC/ALAC:</span><span class="text-sm text-slate-500">Used for Hi-Fi/Lossless tiers on services like Tidal and Apple Music.</span></li>
+                    <ul class="space-y-3">
+                        <li class="flex items-start gap-2"><span class="font-bold text-slate-600 min-w-fit flex-shrink-0">AAC:</span><span class="text-sm text-slate-500">Standard for Apple Music, YouTube. Great quality/bitrate ratio.</span></li>
+                        <li class="flex items-start gap-2"><span class="font-bold text-slate-600 min-w-fit flex-shrink-0">Opus:</span><span class="text-sm text-slate-500">Used by Spotify/YouTube. Highly efficient and versatile.</span></li>
+                        <li class="flex items-start gap-2"><span class="font-bold text-slate-600 min-w-fit flex-shrink-0">FLAC/ALAC:</span><span class="text-sm text-slate-500">Used for Hi-Fi/Lossless tiers on services like Tidal and Apple Music.</span></li>
                     </ul>
                 </div>
 
                 <div class="bg-white p-8 rounded-xl shadow-lg border border-stone-200 card">
                     <h3 class="text-2xl font-bold text-slate-700 mb-4">💬 Real-Time Communication (VoIP)</h3>
                     <p class="text-slate-600 mb-4">Prioritizes very low latency for natural conversation and robustness to network packet loss.</p>
-                     <ul class="space-y-2">
-                        <li class="flex items-center"><span class="font-bold text-slate-600 w-16">Opus:</span><span class="text-sm text-slate-500">The dominant choice for WebRTC, Discord, WhatsApp. Excellent low latency and quality for speech and music.</span></li>
-                        <li class="flex items-center"><span class="font-bold text-slate-600 w-16">G.711:</span><span class="text-sm text-slate-500">Baseline for PSTN interoperability. Very low latency but high bandwidth.</span></li>
-                        <li class="flex items-center"><span class="font-bold text-slate-600 w-16">G.729:</span><span class="text-sm text-slate-500">Older low-bitrate speech codec, good for constrained networks.</span></li>
+                     <ul class="space-y-3">
+                        <li class="flex items-start gap-2"><span class="font-bold text-slate-600 min-w-fit flex-shrink-0">Opus:</span><span class="text-sm text-slate-500">The dominant choice for WebRTC, Discord, WhatsApp. Excellent low latency and quality for speech and music.</span></li>
+                        <li class="flex items-start gap-2"><span class="font-bold text-slate-600 min-w-fit flex-shrink-0">G.711:</span><span class="text-sm text-slate-500">Baseline for PSTN interoperability. Very low latency but high bandwidth.</span></li>
+                        <li class="flex items-start gap-2"><span class="font-bold text-slate-600 min-w-fit flex-shrink-0">G.729:</span><span class="text-sm text-slate-500">Older low-bitrate speech codec, good for constrained networks.</span></li>
                     </ul>
                 </div>
 
                 <div class="bg-white p-8 rounded-xl shadow-lg border border-stone-200 card">
                     <h3 class="text-2xl font-bold text-slate-700 mb-4">📡 Bluetooth Audio</h3>
                     <p class="text-slate-600 mb-4">A battleground of proprietary codecs aiming to deliver the highest quality over a limited wireless bandwidth.</p>
-                     <ul class="space-y-2">
-                        <li class="flex items-center"><span class="font-bold text-slate-600 w-16">SBC:</span><span class="text-sm text-slate-500">Mandatory baseline. Universal but basic quality.</span></li>
-                        <li class="flex items-center"><span class="font-bold text-slate-600 w-16">AAC:</span><span class="text-sm text-slate-500">Preferred by Apple devices. Can offer good quality.</span></li>
-                        <li class="flex items-center"><span class="font-bold text-slate-600 w-16">aptX/LDAC:</span><span class="text-sm text-slate-500">Common in Android, offering various tiers for higher quality and lower latency.</span></li>
+                     <ul class="space-y-3">
+                        <li class="flex items-start gap-2"><span class="font-bold text-slate-600 min-w-fit flex-shrink-0">SBC:</span><span class="text-sm text-slate-500">Mandatory baseline. Universal but basic quality.</span></li>
+                        <li class="flex items-start gap-2"><span class="font-bold text-slate-600 min-w-fit flex-shrink-0">AAC:</span><span class="text-sm text-slate-500">Preferred by Apple devices. Can offer good quality.</span></li>
+                        <li class="flex items-start gap-2"><span class="font-bold text-slate-600 min-w-fit flex-shrink-0">aptX/LDAC:</span><span class="text-sm text-slate-500">Common in Android, offering various tiers for higher quality and lower latency.</span></li>
                     </ul>
                 </div>
             </div>
